--- a/Current_weather_analysis.ipynb
+++ b/Current_weather_analysis.ipynb
@@ -4,30 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1>COMP41680 - Sample API Assignment<h1>"
+    "## Author- Prateek Shrivastava"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Name- Prateek Shrivastava                Student Id : 17200337"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Task 1: Identify one or more suitable web APIs\n",
+    "### First Identify the open web APIs\n",
     "API Chosen:\n",
     "\n",
-    "A single API that was chosen for this assignment was that provided by https://openweathermap.org/\n",
+    "A single API that was chosen for this project was that provided by https://openweathermap.org/\n",
     "\n",
-    "Specifically, the Current weather data API - https://openweathermap.org/current\n",
-    "\n",
-    "To se this API we need to register first which allows us to get the free 60 day trial. This API has the many option I choose by Zip code option. \n",
-    "After signing up, I got a API key which I have used to get the current weather data on the basis of zip code and country code.\n",
-    "The API key I received which works here is &APPID=9b8f06bb6283d9e203cab66e863c9df7"
+    "To see this API we need to register first which allows us to get the free 60 day trial. This API has the many option I choose by Zip code option. \n",
+    "After signing up, I got a API key which I have used to get the current weather data on the basis of zip code and country code."
    ]
   },
   {
@@ -74,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2: Collect data your chosen API(s)\n",
+    "## Second: Collect data your chosen API(s)\n",
     "### Collecting Raw Data - Functions needed:\n",
     "### The API gives the current up to date data\n",
     "#### The following 3 functions were written to allow multiple calls of the API as only limited data is available per call.\n",
@@ -137,7 +127,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h2>Task 3: Parse the collected data, and store it in an appropriate file format<h2>"
+    "<h2>Now Parse the collected data, and store it in an appropriate file format<h2>"
    ]
   },
   {
@@ -175,7 +165,7 @@
     "# As API is fetch the current data so due to bad network connection somethimes it shows error when calling the API for whole data\n",
     "# So I am calling the API as per the country zip code seperatly so load can be diverted.\n",
     "\n",
-    "akey =\"&APPID=9b8f06bb6283d9e203cab66e863c9df7\"   # This is the API key for the API I got.\n",
+    "akey =\"Put your API key\"   # This is the API key for the API I got.\n",
     "# Below are the list of zip codes of US which are the necessary parameters to the API.\n",
     "zipUS = [94111,94209,94203,94028,94022,90210,30144,10001,10002,10003,10004,10005,10007,10010,23185,28080,28092,28262,\n",
     "     30004,30342,32118,32207,32301,32401,10013,10014,10014,10017,10018,10019,10020,10021,10022,10023,10024,10025,10028,10036,\n",
@@ -229,7 +219,7 @@
     "# As API is fetch the current data so due to bad network connection somethimes it shows error when calling the API for whole data\n",
     "# So I am calling the API as per the country zip code seperatly so load can be diverted.\n",
     "\n",
-    "akey =\"&APPID=9b8f06bb6283d9e203cab66e863c9df7\"  # This is the API key for the API I got.\n",
+    "akey =\"Put your API key\"  # This is the API key for the API I got.\n",
     "# Below are the list of zip codes of US which are the necessary parameters to the API.\n",
     "\n",
     "zipUS = [94111,94209,94203,94028,94022,90210,30144,10001,10002,10003,10004,10005,10007,10010,23185,28080,28092,28262,\n",
@@ -270,7 +260,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 4: Load and represent the data using an appropriate data structure. Apply any pre-processing steps to clean/filter/combine the data"
+    "## Load and represent the data using an appropriate data structure. Apply any pre-processing steps to clean/filter/combine the data"
    ]
   },
   {
